Fix alignment issues for Unique Selling Points

--- a/sass/oscailte/components/_usp.scss
+++ b/sass/oscailte/components/_usp.scss
@@ -1,6 +1,9 @@
 .usp {
     text-align: center;
 }
+.usp.row {
+    margin-bottom: 1rem;
+}
 
 .usp__icon {
     text-align: center;
